[tool.poetry]
name = "gym-woodoku"
version = "0.1.0"
description = "It is a reinforcement learning environment for block puzzle games."
authors = ["helpingstar <iamhelpingstar@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.21.0"
pygame = ">=2.1.3"
gymnasium = "^1.0.0a1"
moviepy = ">=1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
