[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0",
]

[project]
authors = [
    { email = "iamhelpingstar@gmail.com", name = "Wooseong Park" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    "gymnasium>=0.28.0",
    "moviepy>=1.0.0",
    "pygame>=2.3.0",
]
description = "It is a reinforcement learning environment for block puzzle games."
dynamic = [
    "version",
]
keywords = [
    "RL-environment",
    "Woodoku",
    "BlockPuzzle",
    "game-ai",
    "machine-learning",
    "reinforcement learning",
]
name = "gym-woodoku"
readme = "README.md"
requires-python = ">=3.10"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.6",
]

[project.urls]
Homepage = "https://github.com/helpingstar/gym-woodoku"
Issues = "https://github.com/helpingstar/gym-woodoku/issues"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "gym_woodoku/envs/blocks.py"
]

[tool.ruff.lint]
ignore = [
    "F401",
]

[tool.setuptools.dynamic.version]
attr = "gym_woodoku.__version__"